Implemented header and skeleton of page

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <section class="content">
       <h2>Fallen, but never forgotten</h2>
       <div class="card">
-        <img src="img_avatar.png" alt="Avatar" style="width: 100%" />
+        <img class="card_image" src="./images/rengoku.jpeg" alt="Avatar" />
         <div class="container">
           <h4><b>John Doe</b></h4>
           <p>Architect & Engineer</p>
