Created character cards, and added quote portion.

--- a/index.html
+++ b/index.html
@@ -35,18 +35,34 @@
     </section>
     <!--Content-->
     <section class="content">
-      <h2>Fallen, but never forgotten</h2>
-      <div class="card">
-        <img class="card_image" src="./images/rengoku.jpeg" alt="Avatar" />
-        <div class="container">
-          <h4><b>John Doe</b></h4>
-          <p>Architect & Engineer</p>
+      <h2>Fallen swordsmen, but never forgotten</h2>
+      <div class="row">
+        <div class="column">
+          <div class="card">
+            <img src="./images/rengoku.jpeg" alt="" />Kyojuro Rengoku, the Flame
+            Hashira
+          </div>
+        </div>
+        <div class="column">
+          <div class="card">
+            <img src="./images/tokito.jpeg" alt="" />Muichiro Tokito, the Mist
+            Hashira
+          </div>
+        </div>
+        <div class="column">
+          <div class="card">
+            <img src="./images/kocho.jpeg" alt="" />Kanae Kocho, the Flower
+            Hashira
+          </div>
         </div>
       </div>
     </section>
-     <!--Quote-->
+    <!--Quote-->
     <section class="quote">
-      <h2>"quote here"</h2>
+      <p id="quote">
+        “No matter how many people you may lose, you have no choice but to go on
+        living -- no matter how devastating the blows, maybe.” -Tanjiro
+      </p>
     </section>
     <!--Footer-->
     <footer>
