Completed footer, page not mobile friendly yet.

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             as it is their very existence that literally sustains the entire
             organization.
           </p>
-          <button class="btn" href="#">Sign Up</button>
+          <button class="btn">Sign Up</button>
         </div>
         <img id="jumping" src="/images/master.jpg" alt="jumping" />
       </div>
@@ -66,7 +66,16 @@
     </section>
     <!--Footer-->
     <footer>
-      <p>footer here</p>
+      <container class="footer__content">
+        <container class="text">
+          <h4>Call to action! It's time!</h4>
+          <p>
+            If you think you have what it takes, sign up by clicking that button
+            right over there!
+          </p>
+        </container>
+        <button id="btn_footer">Sign Up</button>
+      </container>
     </footer>
   </body>
 </html>
