Inserted absolute path for images

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!--Header-->
     <section class="header">
       <nav class="navbar">
-        <a href="index.html"><img id="logo" src="/images/logo.png" /></a>
+        <a href="index.html"><img id="logo" src="./images/logo.png" /></a>
         <div class="nav-links">
           <ul>
             <li><a href="/index.html">Home</a></li>
@@ -30,7 +30,7 @@
           </p>
           <button class="btn">Sign Up</button>
         </div>
-        <img id="jumping" src="/images/master.jpg" alt="jumping" />
+        <img id="jumping" src="./images/master.jpg" alt="jumping" />
       </div>
     </section>
     <!--Content-->
